--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "name": "javascript-exercises",
-  "description": "Collection of JavaScript exercises great for preparing for an interview",
+  "description": "Collection of JavaScript exercises and coding challenges",
   "author": "appalaszynski"
 }
